update gradient, add image folder

--- a/index.html
+++ b/index.html
@@ -5,15 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"
     <title></title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.min.css" integrity="sha512-otONSJGv1l0LjJXcgyqi2MeKXtnthkiXAleeQjFJOKYcVD5u+mOuPb7xCnlsb74Ld+N0ONbP7KYRmW2/OWrvaA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.css" integrity="sha512-wCVOuVtxsXqrQK7tj9j4BvyfITQmpp7UE7mVilD7aieGLYFEIAa5UKTP1RapOf6dxQ9JIKAneakcyykWG4r4Ow==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="fullpage.css">
+<meta property = "og:title" content = "Isaac Addai" />
 </head>
 
 <body>
 
     <div id="fullpage">
-        <div class="section">Hey, my name's Isaac, and I make stuff.</div>
-        <div class="section">Some section</div>
+        <div class="section">Hey, I'm <strong class="strong">Isaac Addai</strong>!👋
+
+            <br>
+            <br>
+            I'm a 3rd-year university student and have been using computers since I was 6. 
+            I love learning about new technology,<br> and keep myself busy with extracurriculars and hobbies, such as going to the gym 🏋️‍♂️. <br>
+            Some of the programming languages I've been learning recently include:
+            <br>
+            <code class="js">.js</code>, <code class="html">.html</code>, <code class="css">.css</code>, <code class="py">.py</code>, <code class="c">.c</code>, and <code class="java">.java</code>
+        </div>
+
+        <div class="section">
+            <div class="experience-content">
+                <img src="imgs/laurierfintech.jpg">
+                <p>something is coming here soon....</p>
+            </div>
+        </div>
+
+       
         <div class="section">Some section</div>
         <div class="section">Some section</div>
     </div>
