add css to move symbol & divider

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         <div class="section">
             <div class="experience-content">
-                <img src="imgs/laurierfintech.jpg">
+                <img src ="imgs/laurierfintech.jpg" class="img1">
+            <div class="divider"></div>
                 <p>something is coming here soon....</p>
             </div>
         </div>
