start projects page

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
        <br>
        <br>
        Enjoy reading about some of my experience and accomplishments below 🙂<br>
-       <strong>
-        Press the images to learn more!
-       </strong>
+       
     </div>
 
 
@@ -35,6 +33,9 @@
 
         <div class="section"><div class="experience-content"><a href="https://www.linkedin.com/in/isaacaddai/details/experience/" target="_blank">
                 <img src ="imgs/laurierfintech.jpg" class="img1"> 
+                <strong class="learn-more">
+                    Press the images to learn more!
+                   </strong>
             </a>
             <div class="divider"></div>
                 <p class="paragraph1">Successfully hired and managed a team to develop <br>
@@ -83,10 +84,31 @@ Mentored team members and facilitated skill development
                 PROJECTS
             </p>
 
-            <a href="https://www.linkedin.com/in/isaacaddai/details/experience/" target="_blank">
-                <img src ="imgs/musicurate.jpg" class="img3"> 
+            <a href="https://github.com/itsaddai/Musicurate" target="_blank">
+                <img src ="imgs/musicurate.jpg" class="img4"> 
+            </a>
+            <a href="https://github.com/itsaddai/Portfolio-V2/" target="_blank">
+                <img src ="imgs/IA.png" class="img5"> 
+            </a>
+            <a href="https://github.com/itsaddai/MorningBot" target="_blank">
+                <img src ="imgs/morningbot.png" class="img6"> 
             </a>
 
+
+            <P class="paragraph4">
+                Musicurate is my full-stack project designed to enhance music discovery. <br>
+                Leveraging Spotify's API, it empowers users to explore and connect<br>
+                with their favorite music type like never before.
+            </P>
+            <P class="paragraph5">
+                This website is my personal portfolio, showcasing my skills and experience.<br>
+                It was built using HTML, CSS, and JavaScript.
+            </P>
+            <P class="paragraph6">
+                MorningBot is a Discord bot that I developed using Python. <br>
+                It is designed to help users start their day off right by providing them with<br>
+                a motivational quote and a random song to listen to.
+                </P>
             <div class="divider2"></div>
 
         </div>
