--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.css" integrity="sha512-wCVOuVtxsXqrQK7tj9j4BvyfITQmpp7UE7mVilD7aieGLYFEIAa5UKTP1RapOf6dxQ9JIKAneakcyykWG4r4Ow==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="fullpage.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 <meta property = "og:title" content = "Isaac Addai | Software Engineer" />
 </head>
 
@@ -81,8 +81,8 @@ Mentored team members and facilitated skill development
                 PROJECTS
             </p>
 
-            <a href="https://github.com/itsaddai/Musicurate" target="_blank">
-                <img src ="imgs/musicurate.jpg" class="img4"> 
+            <a href="https://github.com/itsaddai/Passgen" target="_blank">
+                <img src ="imgs/passgen.png" class="img4"> 
             </a>
             <a href="https://github.com/itsaddai/Portfolio-V2/" target="_blank">
                 <img src ="imgs/IA.png" class="img5"> 
@@ -93,9 +93,10 @@ Mentored team members and facilitated skill development
 
 
             <P class="paragraph4">
-                Musicurate is my full-stack project designed to enhance music discovery. <br>
-                Leveraging Spotify's API, it empowers users to explore and connect<br>
-                with their favorite music type like never before.
+                Passgen is my full-stack application meticulously developed using the MERN stack <br>
+                (MongoDB, Express, React, Node.js). It is a password generator that allows users to<br>
+                generate passwords and store them in a database, complete with password length and a saving feature.
+                
             </P>
             <P class="paragraph5">
                 This website is my personal portfolio, showcasing some of my skills and experience<br>
