--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="https://github.com/itsaddai" target="_blank" class="button">
             <i class="fab fa-github"></i>
         </a>
-        <a href="Isaac Addai_Resume.pdf" target="_blank" class="button">
+        <a href="Isaac_Addai Resume.pdf" target="_blank" class="button">
             <i class="fas fa-file-pdf"></i>
         </a>
         <a href="mailto:IsaacKojoAddai@outlook.com" class="button">
